# cppgsi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
.github/smoke_test/: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
cmake/: cppgsiConfig.cmake.in
examples/: CMakeLists.txt  grenades.cpp  quickstart.cpp  round_events.cpp
gsi/: component_observer.h  game_state.cpp  game_state.h  gsi_config.cpp  gsi_config.h  gsi_dispatcher.cpp  gsi_dispatcher.h  gsi_server.cpp  gsi_server.h
gsi/models/: added.h  bomb.h  grenade.h  map.h  models.cpp  phase_countdowns.h  player.h  previously.h  provider.h  round.h  vec3.h  weapon.h
tests/: CMakeLists.txt  test_dispatcher.cpp  test_models.cpp
